split in type files

--- a/src/webcomponents/index.html
+++ b/src/webcomponents/index.html
@@ -9,6 +9,9 @@
     <link rel="import" href="yl-card/yl-card.html">
 </head>
 <body>
+    <!-- build:template
+    {{ message }}
+    /build -->
     <yl-card title="John Doh"></yl-card>
 </body>
 </html>
