--- a/src/webcomponents/yl-card/yl-card.html
+++ b/src/webcomponents/yl-card/yl-card.html
@@ -1,15 +1,4 @@
-<script>
-var YlCardPrototype = Object.create(HTMLElement.prototype);
-YlCardPrototype.createdCallback = function() {
-  this.textContent = "I'm an YlCard!";
-};
-
-YlCardPrototype.foo = function() {
-  console.log('foo() called');
-};
-
-var YlCard = document.registerElement('yl-card', {
-  prototype: YlCardPrototype
-});
-
-</script>
+<div>
+  <h1>Card</h1>
+  <p>The Card</p>
+</div>
