add the processHtml markup

--- a/src/webcomponents/yl-card/yl-card.html
+++ b/src/webcomponents/yl-card/yl-card.html
@@ -1,3 +1,10 @@
+<!-- build:css inline -->
+<link rel="stylesheet" href="yl-card.js">
+<!-- /build -->
+
+<!-- build:js inline -->
+<script src="yl-card.js"></script>
+<!-- /build -->
 <div>
   <h1>Card</h1>
   <p>The Card</p>
