--- a/src/webcomponents/yl-card/yl-card.html
+++ b/src/webcomponents/yl-card/yl-card.html
@@ -1,10 +1,11 @@
 <!-- build:css inline -->
-<link rel="stylesheet" href="yl-card.js">
+<link rel="stylesheet" href="yl-card.css">
 <!-- /build -->
 
 <!-- build:js inline -->
 <script src="yl-card.js"></script>
 <!-- /build -->
+
 <div>
   <h1>Card</h1>
   <p>The Card</p>
