create web component, pass attribute and set inner content

--- a/src/webcomponents/index.html
+++ b/src/webcomponents/index.html
@@ -12,6 +12,6 @@
     <!-- build:template
     {{ message }}
     /build -->
-    <yl-card title="John Doh"></yl-card>
+    <yl-card name="John Doh"></yl-card>
 </body>
 </html>
