--- a/src/webcomponents/yl-card/yl-card.html
+++ b/src/webcomponents/yl-card/yl-card.html
@@ -6,7 +6,7 @@
 <script src="yl-card.js"></script>
 <!-- /build -->
 
-<div>
-  <h1>Card</h1>
-  <p>The Card</p>
+<div class="yl-card">
+  <h1 class="name">Card</h1>
+  <p class="descr">The Card</p>
 </div>
