create a small component to test the rendering

--- a/src/webcomponents/yl-card/yl-card.html
+++ b/src/webcomponents/yl-card/yl-card.html
@@ -1,12 +1,15 @@
-<!-- build:css inline -->
-<link rel="stylesheet" href="yl-card.css">
-<!-- /build -->
+<template id="tpl_card">
+  <!-- build:css inline -->
+  <link rel="stylesheet" href="yl-card.css">
+  <!-- /build -->
+
+
+  <div class="yl-card">
+    <h1 class="yl-card__name">Card</h1>
+    <p class="yl-card__title">The Card</p>
+  </div>
+</template>
 
 <!-- build:js inline -->
 <script src="yl-card.js"></script>
 <!-- /build -->
-
-<div class="yl-card">
-  <h1 class="name">Card</h1>
-  <p class="descr">The Card</p>
-</div>
