--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WebComponents</title>
+    <title>WebComponentJs Polyfill</title>
+    <!-- build:js ../vendor/webcomponents.js/webcomponents.js -->
+    <script src="../node_modules/webcomponents.js/webcomponents.js"></script>
+    <!-- /build -->
+    <link rel="import" href="yl-card/yl-card.html">
 </head>
 <body>
-    <h1>These are example of web-components created with different libraries to learn their specificity.</h1>
-    <nav>
-        <ul>
-            <li><a href="webcomponents">WebComponents</a></li>
-            <li><a href=""></a></li>
-        </ul>
-    </nav>
+    <!-- build:template
+    {{ message }}
+    /build -->
+    <yl-card name="John Doh" title="engineer"></yl-card>
 </body>
 </html>
