--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>WebComponentJs Polyfill</title>
-    <!-- build:js ../vendor/webcomponents.js/webcomponents.js -->
-    <script src="../node_modules/webcomponents.js/webcomponents.js"></script>
-    <!-- /build -->
-    <link rel="import" href="yl-card/yl-card.html">
-</head>
-<body>
-    <!-- build:template
-    {{ message }}
-    /build -->
-    <yl-card name="John Doh" title="engineer"></yl-card>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>WebComponentJs Polyfill</title>
+        <!-- build:js ../vendor/webcomponents.js/webcomponents.js -->
+        <script src="../node_modules/webcomponents.js/webcomponents.js"></script>
+        <!-- /build -->
+        <link rel="import" href="my-card/my-card.html">
+    </head>
+    <body>
+        <my-card name="John Doh" title="Engineer"></my-card>
+    </body>
 </html>
