add a simple title to the main page

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link rel="import" href="my-card/my-card.html">
     </head>
     <body>
+        <h1>Playing with WebComponents</h1>
         <my-card name="John Doh" title="Engineer"></my-card>
     </body>
 </html>
