--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
         <script src="../node_modules/webcomponents.js/webcomponents.js"></script>
         <!-- /build -->
         <link rel="import" href="my-card/my-card.html">
+        <link rel="import" href="es6-card/es6-card.html">
     </head>
     <body>
         <h1>Playing with WebComponents</h1>
-        <my-card name="John Doh" title="Engineer"></my-card>
+        <my-card name="John Doh" title="es5 code"></my-card>
+        <my-card name="Jeanne Dark" title="es5 code"></my-card>
+        <es6-card name="John Doh" title="es6"></es6-card>
+        <es6-card name="Jeanne Dark" title="es6"></es6-card>
     </body>
 </html>
