--- a/src/webcomponents/index.html
+++ b/src/webcomponents/index.html
@@ -7,11 +7,12 @@
     <script src="../node_modules/webcomponents.js/webcomponents.js"></script>
     <!-- /build -->
     <link rel="import" href="yl-card/yl-card.html">
+    <link rel="import" href="yl-loader/yl-loader.html">
 </head>
 <body>
-    <!-- build:template
-    {{ message }}
-    /build -->
     <yl-card name="John Doh"></yl-card>
+    <yl-loader type="1"></yl-loader>
+    <yl-loader type="2"></yl-loader>
+    <yl-loader type="3"></yl-loader>
 </body>
 </html>
