--- a/src/webcomponents/yl-card/yl-card.html
+++ b/src/webcomponents/yl-card/yl-card.html
@@ -7,6 +7,6 @@
 <!-- /build -->
 
 <div class="yl-card">
-  <h1 class="name">Card</h1>
-  <p class="descr">The Card</p>
+  <h1 class="yl-card__name">Card Title</h1>
+  <p class="yl-card__descr">The Card Description</p>
 </div>
