--- a/src/webcomponents/index.html
+++ b/src/webcomponents/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <yl-card name="John Doh"></yl-card>
-    <yl-button>The btn label</yl-button>
+    <yl-button>A simple Btn</yl-button>
+    <yl-button is-loading="true">Btn just clicked</yl-button>
     <yl-loader type="1"></yl-loader>
     <yl-loader type="2"></yl-loader>
     <yl-loader type="3"></yl-loader>
