--- a/src/webcomponents/yl-button/yl-button.html
+++ b/src/webcomponents/yl-button/yl-button.html
@@ -1,9 +1,9 @@
-<!-- build:css inline -->
-<link rel="stylesheet" href="yl-button.css">
-<!-- /build -->
-
 <template id="tpl_yl-button">
-    <button class="yl-button">
+    <!-- build:css inline -->
+    <link rel="stylesheet" href="yl-button.css">
+    <!-- /build -->
+
+    <button class="yl-button btn">
         <span class="yl-button__loader"><yl-loader type="1"></yl-loader></span>
         <span class="yl-button__text"><content></content></span>
     </button>
